test_scripts/errors/if_condition_undefined.shm
if undefined_var { 1; }
