test_scripts/errors/if_condition_undefined.stderr
 1 | if undefined_var { 1; }
        ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
